# Urban_PointCloud_Processing

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  README.md  environment.yml  requirements.txt  run_on_azure.py  setup.cfg
datasets/: README.md
datasets/ahn/: ahn_2386_9702.laz  ahn_2386_9702.npz  ahn_2397_9705.laz  ahn_2397_9705.npz
datasets/bag/: bag_buildings_demo.csv
datasets/bgt/: bgt_buildings_2386_9702.csv  bgt_buildings_demo.csv  bgt_points.csv  bgt_points_2386_9702.csv  bgt_roads.csv  bgt_roads_2386_9702.csv  bgt_roads_demo.csv  bgt_street_furniture_demo.csv  bgt_street_furniture_points_demo.csv  bgt_tramtracks_demo.csv  custom_points_2386_9702.csv  custom_points_demo.csv  custom_poles_demo.csv
datasets/change_detection/: m3c2.ipynb  m3c2_params.txt  sidewalk_filter.laz  sidewalk_filter2.laz  sidewalk_filter2_xyz.laz  sidewalk_filter_xyz.laz
media/: cc_color_scale.xml
notebooks/: 0. Complete solution.ipynb  0.1 Complete solution.ipynb  1. AHN preprocessing.ipynb  1. Generate reference data.ipynb  1. PDOK preprocessing.ipynb  2. BGT point fusion.ipynb  2. Data fusion.ipynb  2. Ground and Buildings.ipynb  3. Cables.ipynb  3. Cars.ipynb  3. Clustering based region growing.ipynb  3. Label connected comp.ipynb  3. Region growing.ipynb  4. Cars extraction.ipynb  4. Cars.ipynb  4. Label cars.ipynb  4. Pole-like objects.ipynb  5. Pole-like objects.ipynb  5. Region growing.ipynb  5. Street furniture.ipynb  6. Location of instance.ipynb  6. Street furniture.ipynb  AHN_preprocessing.ipynb  Analysis.ipynb  BGT point fusion.ipynb  README.md  Re-label tiles.ipynb  Refine ground.ipynb  Region growing.ipynb  Speed_test.ipynb  Visualisations.ipynb  set_path.py
scripts/: ahn_batch_processor.py  ahn_batch_processor_azure.py  bgt_building_scraper.py  bgt_scrape.py  set_path.py
src/: abstract_processor.py  fusion_pipeline.py  labels.py  pipeline.py
src/analysis/: analysis_tools.py
src/cluster/: label_connected_comp.py  region_growing.py
src/fusion/: __init__.py  abstract.py  ahn_fuser.py  bgt_fuser.py  bridge_fuser.py  building_fuser.py  car_fuser.py  data_fuser.py  fusion_pipeline.py  noise_filter.py  pole_fuser.py  region_growing_fuser.py  road_fuser.py  street_furniture_fuser.py
src/preprocessing/: ahn_preprocessing.py
src/region_growing/: __init__.py  abstract.py  label_connected_comp.py  layer_lcc.py  refine_ground.py  region_growing.py  top_bottom_lcc.py
src/scrapers/: ams_bgt_scraper.py  bgt_scraper.py  ndw_scraper.py
src/upcp/: abstract_processor.py  labels.py  pipeline.py
src/utils/: ahn_utils.py  bgt_utils.py  clip_utils.py  (+8 more)
(+29 files in other folders)
