[metadata]
name = upcp
version = 0.1
author = Daan Bloembergen
author_email = daanbl.dev@gmail.com
description = Repository for automatic classification and labeling of Urban PointClouds using data fusion and region growing techniques.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Amsterdam-AI-Team/Urban_PointCloud_Processing
project_urls =
    Bug Tracker = https://github.com/Amsterdam-AI-Team/Urban_PointCloud_Processing/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    folium>=0.12
    matplotlib>=3.4
    numba>=0.54
    numpy>=1.20
    laspy[lazrs]~=2.0
    pandas>=1.3
    shapely>=1.7
    scikit-learn>=0.24
    scipy>=1.6
    tifffile>=2021.6
    tqdm>=4.60
    zarr>=2.8

[options.extras_require]
notebooks =
    jupyterlab
    ipympl
    ipywidgets
region_growing =
    open3d>=0.14

[options.packages.find]
where = src
